# ultra-fast-image-gen

./: .env.example  .gitignore  Launch.command  README.md  anima_aio.py  app.py  bench_uncensored.py  bonsai_mflux.py  engine.py  flux2_sdnq_hs.py  generate.py  gguf_qwen3.py  loaders.py  mcp_server.py  mflux_hs_uncensored.py  mps_chunked_attn.py  pyproject.toml  requirements.txt  run_mflux_hs_uncensored.py  server.py
.opencode/skills/website-visual-assets/: SKILL.md
docs-site/: components.json  index.md  package.json  pnpm-lock.yaml  tailwind.config.js
docs-site/.vitepress/: config.mts
docs-site/.vitepress/cache/deps_temp_2f529ace/: vue.js
docs-site/.vitepress/components/landing/: CTASection.vue  DemoShowcase.vue  FeatureBento.vue  HardwareCloud.vue  HeroShowcase.vue  MetricsSection.vue  TerminalShowcase.vue  index.ts
docs-site/.vitepress/components/ui/badge/: Badge.vue
docs-site/.vitepress/components/ui/button/: Button.vue
docs-site/.vitepress/components/ui/card/: Card.vue  CardTitle.vue
docs-site/.vitepress/components/ui/table/: TableCaption.vue  TableCell.vue  TableFooter.vue  TableHead.vue  TableHeader.vue  TableRow.vue
docs-site/.vitepress/theme/: index.ts  style.css
docs-site/guide/: benchmarks.md  credits.md  mcp.md  models.md  quick-start.md  usage.md
patches/: anima-ggml-metal-im2col3d-pad.patch  mflux_hs_uncensored_gguf.patch
scripts/: install-opencode-mcp.py  setup_anima_metal_runner.sh  setup_mflux_hs.sh
web/: app.js  index.html  style.css
